small refactoring; TokenMessage don't use MessagePack; DEFLATE using only if it makes better now